fix: улучшил видимость модального окна

--- a/frontend/client/dashboard.html
+++ b/frontend/client/dashboard.html
@@ -3096,8 +3096,8 @@ ${agr.end_date ? `📅 Дата закрытия: ${new Date(agr.end_date).toLoc
     </script>
     
     <!-- Transaction Details Modal -->
-    <div id="transactionModal" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.6); z-index: 10000; align-items: center; justify-content: center; backdrop-filter: blur(4px);" onclick="if(event.target === this) closeTransactionModal()">
-        <div id="transactionModalContent" style="background: var(--bg-color); border-radius: 16px; max-width: 600px; width: 90%; max-height: 90vh; overflow-y: auto; box-shadow: 0 20px 60px rgba(0,0,0,0.4); animation: modalSlideIn 0.3s ease-out;">
+    <div id="transactionModal" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.85); z-index: 10000; align-items: center; justify-content: center; backdrop-filter: blur(8px);" onclick="if(event.target === this) closeTransactionModal()">
+        <div id="transactionModalContent" style="background: var(--bg-color); border: 1px solid var(--border-color); border-radius: 16px; max-width: 600px; width: 90%; max-height: 90vh; overflow-y: auto; box-shadow: 0 25px 80px rgba(0,0,0,0.6); animation: modalSlideIn 0.3s ease-out;">
         </div>
     </div>
     
